Minor text align bug/ needs content updated

--- a/Scrimba Projects/Simple-Blog/styles2.css
+++ b/Scrimba Projects/Simple-Blog/styles2.css
@@ -1,4 +1,30 @@
 /* //////////////////// */
+/* General Selectors */
+/* //////////////////// */
+
+img {
+  width: 100%;
+  display: block;
+}
+
+body {
+  margin: 0;
+}
+
+button {
+  background-color: inherit;
+  border: none;
+  display: block;
+
+  padding: 0;
+}
+
+button:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+/* //////////////////// */
 /* Header Layout */
 /* //////////////////// */
 .flex {
@@ -20,34 +46,30 @@
   margin: 1em;
 }
 
-@media (max-width: 620px) {
+.nav-bar li:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 680px) {
   .flex {
     flex-direction: column;
+    align-items: center;
   }
   .container {
     max-width: 350px;
   }
 }
+
 /* //////////////////// */
-/* General Selectors */
+/* Layout */
 /* //////////////////// */
 
-img {
-  width: 100%;
-  display: block;
+main {
+  width: 70%;
 }
 
-body {
-  margin: 0;
-}
-
-button {
-  background-color: inherit;
-  border: none;
-}
-
-button:hover {
-  cursor: pointer;
+aside {
+  width: 25%;
 }
 
 /* //////////////////// */
@@ -64,8 +86,9 @@ body {
   font-size: 33px;
 }
 
-.title-caption {
-  font-size: 13px;
+.title-caption,
+button {
+  font-size: 15px;
 }
 
 .article-title {
@@ -90,6 +113,7 @@ body {
 }
 
 .title-caption,
-a {
+a,
+button {
   color: #1792d2;
 }
